# ewellix_lift_kit

./: .clang-format  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  ewellix_liftkit.humble.repos
ewellix_liftkit_deploy/: CMakeLists.txt  package.xml
ewellix_liftkit_deploy/config/: controllers_common.yaml  liftkit_controllers.yaml
ewellix_liftkit_deploy/launch/: liftkit.launch.py  liftkit_calibration.launch.py  spawn_controllers.launch.py
ewellix_liftkit_deploy/scripts/: test_publisher.py
ewellix_liftkit_description/: CMakeLists.txt  package.xml
ewellix_liftkit_description/config/: default_config.yaml
ewellix_liftkit_description/launch/: view_2_robots.launch.py  view_robot.launch.py
ewellix_liftkit_description/meshes/: lift_high.dae  lift_low.dae
ewellix_liftkit_description/meshes/visual/: lift_high.stl  lift_high_500mm.stl  lift_high_700mm.dae  lift_high_700mm.stl  lift_low.dae  lift_low.stl  lift_low_500mm.stl  lift_low_700mm.dae  lift_low_700mm.stl  lift_mid.dae  lift_mid.stl  lift_mid_500mm.stl  lift_mid_700mm.dae  lift_mid_700mm.stl
ewellix_liftkit_description/rviz/: view_robot.rviz
ewellix_liftkit_description/urdf/: ewellix_lift.urdf.xacro  ewellix_lift.xacro  ewellix_lift_700mm.urdf.xacro  ewellix_liftkit.ros2_control.xacro  ewellix_macro.urdf.xacro  properties.xacro  two_ewellix_lift.urdf.xacro
ewellix_liftkit_hardware_interface/: CMakeLists.txt  liftkit_hardware_interface.xml  package.xml
ewellix_liftkit_hardware_interface/include/liftkit_hardware_interface/: controller_stopper.hpp  liftkit_hardware_interface.hpp  robot_status_publisher.hpp  serial_com_tlt.h  visibility_control.h
ewellix_liftkit_hardware_interface/src/: controller_stopper.cpp  controller_stopper_node.cpp  liftkit_hardware_interface.cpp  robot_status_publisher.cpp  serial_com_tlt.cpp
ewellix_liftkit_hardware_interface/test/: test_liftkit_hardware_interface.cpp
ewellix_liftkit_moveit_config/: CMakeLists.txt  package.xml
ewellix_liftkit_moveit_config/config/: ewellix_liftkit_moveit_controllers.yaml  joint_limits.yaml  kinematics.yaml
ewellix_liftkit_moveit_config/launch/: liftkit_moveit.launch.py
ewellix_liftkit_moveit_config/rviz/: view_robot.rviz
ewellix_liftkit_moveit_config/srdf/: ewellix_liftkit.srdf
liftkit_robot/: package.xml
liftkit_robot/description/: ewellix_lift_700mm.urdf.xacro  rail_e.urdf.xacro  ros2_control.xacro  simple_rail.xacro
liftkit_robot/scripts/: test_publisher.py
