<?xml version="1.0"?>
<package format="3">
  <name>ewellix_liftkit_deploy</name>
  <version>1.0.0</version>
  <description>The ewellix liftkit deploy package</description>

  <maintainer email="samuel.a.sowell@nasa.gov">Alex Sowell</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
