<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>liftkit_hardware_interface</name>
  <version>0.1.0</version>
  <description>Ewellix Liftkit TLT Hardware Interface used to command hardware with ROS2 Control</description>
  <maintainer email="samuel.a.sowell@nasa.gov">Alex Sowell</maintainer>
  <license>NASA-1.3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rcpputils</depend>
  <depend>tinyxml2_vendor</depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>serial</depend>

  <build_depend>rcutils</build_depend>
  <exec_depend>rcutils</exec_depend>


  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
