<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>liftkit</name>
  <version>0.1.0</version>
  <description>Ewellix liftkit driver that contains config, description, and launch files. </description>
  <maintainer email="samuel.a.sowell@nasa.gov">Alex Sowell</maintainer>
  <license>NASA-1.3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>launch_ros</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>liftkit_hardware_interface</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
